# src/appointments/dto/appointment-result.dto.ts
@@ -1,0 +1,9 @@
+import { AppointmentDto } from './appointment.dto';
+
+export class AppointmentResultDto {
+  id: number;
+  diagnosis: string;
+  recommendations: string;
+  appointment_id: number;
+  appointment: AppointmentDto;
+}
